--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,15 @@
-streamlit>=1.42.0
-pdfplumber>=0.11.0
+streamlit>=1.24.0
+pandas>=1.5.3
+numpy>=1.24.3
+PyMuPDF>=1.22.5
+pdfplumber>=0.9.0
 python-dotenv>=1.0.0
-groq>=0.18.0
-pandas>=2.2.0
 openpyxl>=3.1.2
-pdf2image>=1.17.0
-easyocr>=1.7.2
-pillow>=11.0.0
-python-multipart>=0.0.6
-python-doctr
-streamlit-elements>=0.1.0
-PyMuPDF
-
-
-numpy>=1.24.0
-
-
-# PaddleOCR with optimization settings
+groq>=0.4.0
 paddlepaddle==2.5.0
 paddleocr==2.6.1.3
-Pillow>=9.5.0
+Pillow==9.5.0
+opencv-python-headless==4.8.0.74
 
 # Additional libraries
 # Uncomment if you need these
