--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Core requirements
 streamlit>=1.24.0
 pandas>=1.5.3
 numpy>=1.24.3
@@ -6,12 +7,16 @@ pdfplumber>=0.9.0
 python-dotenv>=1.0.0
 openpyxl>=3.1.2
 groq>=0.4.0
-paddlepaddle==2.5.0
+
+# PaddleOCR - updated versions that are available
+paddlepaddle==2.6.0
 paddleocr==2.6.1.3
 Pillow==9.5.0
 opencv-python-headless==4.8.0.74
 
-# Additional libraries
-# Uncomment if you need these
-# doctr-ocr
-# pdf2image
+# Add specific dependencies for PaddleOCR
+pyclipper>=1.2.1
+shapely>=1.7.1
+scikit-image>=0.19.0
+imgaug>=0.4.0
+rapidfuzz>=1.9.1
