--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 streamlit>=1.24.0
 pandas>=1.5.3
 numpy>=1.24.3
-PyMuPDF>=1.22.5
+PyMuPDF<1.21.0  # Downgraded to be compatible with PaddleOCR
 pdfplumber>=0.9.0
 python-dotenv>=1.0.0
 openpyxl>=3.1.2
@@ -20,3 +20,5 @@ shapely>=1.7.1
 scikit-image>=0.19.0
 imgaug>=0.4.0
 rapidfuzz>=1.9.1
+boto3
+python-dotenv
