--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,4 @@ tqdm>=4.65.0  # Changed from tqdm74 which doesn't exist
 # Additional dependencies
 tensorflow>=2.10.0
 importlib-metadata>=6.0.0
-lmdb==1.6.1  # Explicitly specify compatible version
+lmdb>=1.6.0,<=1.6.2
