--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,24 @@
-# requirements.txt - Update this file
-
 # Core dependencies
 streamlit>=1.24.0
 pandas>=1.5.3
 numpy>=1.24.3
-PyMuPDF<1.21.0
+# Changed PyMuPDF to use a specific binary version
+PyMuPDF==1.18.17
 pdfplumber>=0.9.0
 python-dotenv>=1.0.0
 openpyxl>=3.1.2
 groq>=0.4.0
 
-# OCR dependencies - modified for Streamlit Cloud compatibility
+# OCR dependencies - EasyOCR is the primary OCR engine for Streamlit Cloud
 easyocr>=1.7.0
-# Note: paddleocr and paddlepaddle are commented out due to compatibility issues
-# paddleocr
-# paddlepaddle
-opencv-python-headless
-shapely
-pyclipper
-scikit-image
-imgaug
-
-tqdm>=4.65.0  # Changed from tqdm74 which doesn't exist
+opencv-python-headless>=4.5.4
+shapely>=1.7.1
+pyclipper>=1.2.1
+scikit-image>=0.18.3
+imgaug>=0.4.0
+lmdb>=1.3.0
+tqdm>=4.64.0
 
 # Additional dependencies
 tensorflow>=2.10.0
 importlib-metadata>=6.0.0
-lmdb>=1.6.0,<=1.6.2
