--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,25 @@
 streamlit>=1.24.0
 pandas>=1.5.3
 numpy>=1.24.3
-# Changed PyMuPDF to use a specific binary version
-PyMuPDF==1.18.17
+
+# PDF processing - using alternatives that don't need compilation
 pdfplumber>=0.9.0
+PyPDF2>=2.10.0
+# PyMuPDF is commented out due to build issues on Streamlit Cloud
+# PyMuPDF==1.18.17
+
 python-dotenv>=1.0.0
 openpyxl>=3.1.2
 groq>=0.4.0
 
 # OCR dependencies - EasyOCR is the primary OCR engine for Streamlit Cloud
 easyocr>=1.7.0
+# Use the -h version of OpenCV to avoid GUI dependencies
 opencv-python-headless>=4.5.4
+Pillow>=9.0.0
+scikit-image>=0.18.3 
 shapely>=1.7.1
 pyclipper>=1.2.1
-scikit-image>=0.18.3
-imgaug>=0.4.0
-lmdb>=1.3.0
 tqdm>=4.64.0
 
 # Additional dependencies
