--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,35 @@
-# Core dependencies
-streamlit>=1.24.0
-pandas>=1.5.3
-numpy>=1.24.3
+# OCR Libraries
+easyocr==1.7.2
+paddleocr==2.7.0.3
+keras-ocr==0.8.6
+tensorflow==2.15.0
 
-# PDF processing - using alternatives that don't need compilation
-pdfplumber>=0.9.0
-PyPDF2>=2.10.0
-# PyMuPDF is commented out due to build issues on Streamlit Cloud
-# PyMuPDF==1.18.17
+# API and LLM
+groq==0.3.1
 
-python-dotenv>=1.0.0
-openpyxl>=3.1.2
-groq>=0.4.0
+# Additional Utilities
+traceback==0.2.0
+python-multipart==0.0.9
+base64==1.0.2
+rapidocr-onnxruntime==1.1.5
 
-# OCR dependencies - EasyOCR is the primary OCR engine for Streamlit Cloud
-easyocr>=1.7.0
-# Use the -h version of OpenCV to avoid GUI dependencies
-opencv-python-headless>=4.5.4
-Pillow>=9.0.0
-scikit-image>=0.18.3 
-shapely>=1.7.1
-pyclipper>=1.2.1
-tqdm>=4.64.0
+# Data Manipulation
+matplotlib==3.8.3
+seaborn==0.13.2
 
-# Additional dependencies
-tensorflow>=2.10.0
-importlib-metadata>=6.0.0
+# Excel Handling
+xlrd==2.0.1
+XlsxWriter==3.2.0
+
+# Requirements for data conversion and storage
+requests==2.31.0
+botocore==1.34.21
+boto3==1.34.21
+
+# Extra Utilities
+types-requests==2.31.0
+pyarrow==15.0.0
+
+rapidocr-onnxruntime
+opencv-python-headless
+onnxruntime
