--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,5 @@ boto3==1.34.21
 types-requests==2.31.0
 pyarrow==15.0.0
 
-# RapidOCR dependencies
-rapidocr-onnxruntime==1.3.1
-opencv-python-headless==4.8.1.78
-onnxruntime==1.16.3
+pip install easyocr
+
