--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,18 @@
-# OCR Libraries
-easyocr==1.7.2
-tensorflow==2.17.0
+# Core packages
+streamlit>=1.26.0
+pandas>=2.0.0
+numpy>=1.24.0
+python-dotenv>=1.0.0
+pdfplumber>=0.10.0
+openpyxl>=3.1.0
 
-# API and LLM
-groq==0.3.1
+# OCR and PDF processing
+easyocr>=1.7.0
+pytesseract>=0.3.10
+PyMuPDF>=1.22.0  # This is the fitz package
 
-# Additional Utilities
-traceback==0.2.0
-python-multipart==0.0.9
-base64==1.0.2
+# API clients
+groq>=0.3.0,<0.4.0  # Updated version range to resolve dependency issue
 
-# Data Manipulation
-matplotlib==3.8.3
-seaborn==0.13.2
-
-# Excel Handling
-xlrd==2.0.1
-XlsxWriter==3.2.0
-
-
-# Extra Utilities
-types-requests==2.31.0
-pyarrow==15.0.0
+# Visualization and UI
+Pillow>=10.0.0
